--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
+    "tailwindcss": "^1.1.4",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
